--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-force-graph": "^1.47.6",
+    "react-force-graph-2d": "^1.27.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
