--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-force-graph": "^1.47.6",
     "react-force-graph-2d": "^1.27.1",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
